--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 DATABASE_NAME="ebpm"
 DATABASE_USER="postgres"
-DATABASE_PASSWORD="postgres"
+DATABASE_PASSWORD="admin"
 DATABASE_HOST="localhost"
 DATABASE_PORT="5432"
