--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@bpmn-io/properties-panel": "^0.18.0",
     "@popperjs/core": "^2.11.5",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.0",
     "bpmn-js": "^9.3.1",
+    "bpmn-js-properties-panel": "^1.4.0",
+    "diagram-js": "^8.7.1",
     "jquery": "^3.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
