--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,12 +5,15 @@
   "dependencies": {
     "@bpmn-io/properties-panel": "^0.18.0",
     "@popperjs/core": "^2.11.5",
+    "@react-pdf/renderer": "^3.0.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "assert": "^2.0.0",
     "bootstrap": "^5.2.0",
     "bpmn-js": "^9.3.1",
     "bpmn-js-properties-panel": "^1.4.0",
+    "buffer": "^6.0.3",
     "diagram-js": "^8.7.1",
     "jquery": "^3.6.0",
     "react": "^18.2.0",
