--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,4 +11,5 @@ pandas
 apyori
 psycopg2-binary==2.8.6
 gunicorn==20.1.0
-spacy
+spacy>=3.0.0,<4.0.0
+en_core_web_md @ https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.4.1/en_core_web_md-3.4.1-py3-none-any.whl
