--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       POSTGRES_PASSWORD: ${DATABASE_USER}
       POSTGRES_DB: ${DATABASE_PASSWORD}
     volumes:
-      - bd_data:/var/lib/postgresql/data/
+      - ~/bd_data/bd_data:/var/lib/postgresql/data/
     healthcheck:
       test: [ "CMD-SHELL", "pg_isready -U ${DATABASE_USER}" ]
       interval: 5s
