--- a/deployment/backend/nginx.conf
+++ b/deployment/backend/nginx.conf
@@ -10,6 +10,7 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
     location /static {
+        add_header Access-Control-Allow-Origin *;
         root /opt/app/backend;
     }
 }
