--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -3,14 +3,14 @@ version: '3.9'
 services:
 
   db:
-    image: postgres
+    image: postgres:15
     restart: always
     environment:
       POSTGRES_USER: ${DATABASE_NAME}
       POSTGRES_PASSWORD: ${DATABASE_USER}
       POSTGRES_DB: ${DATABASE_PASSWORD}
     volumes:
-      - ~/bd_data/bd_data:/var/lib/postgresql/data/
+      - bd_data:/var/lib/postgresql/data/
     healthcheck:
       test: [ "CMD-SHELL", "pg_isready -U ${DATABASE_USER}" ]
       interval: 5s
